--- a/src/components/welcome/welcome.css
+++ b/src/components/welcome/welcome.css
@@ -1,4 +1,4 @@
-.welcome-container {
+/* .welcome-container {
   margin: 2rem auto;
   width: 60%;
   text-align: center;
@@ -8,14 +8,21 @@
   border-radius: 0.5rem;
 }
 
-/* This targets any h1 that is a child of an element with the .welcome-container class */
 .welcome-container > h1 {
   display: flex;
   flex-direction: column;
   color: var(--primary);
 }
 
-/* This targets any div that is a child of an element with the .welcome-container class */
 .welcome-container > div {
   font-style: italic;
+} */
+
+/* welcome.css */
+.welcome-container {
+  background-image: url("/home.webp");
+  background-size: cover;
+  background-position: center;
+  height: 100vh; /* Make sure it covers the whole viewport */
+  width: 100%;
 }
